2003-07-18  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler: all modules in the package
	overhauled to support scoping.

	* SkunkWeb/Services/requestHandler/requestHandler.py,
	SkunkWeb/Services/web/protocol.py (_processRequest): : commented
	out debug statements in the main loop.

	* pylibs/DT/DTLexer.py (DTToken.__repr__): fix for closed elements.

2003-07-17  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/hooks.py (KeyedHook.oneshot, Hook.oneshot): added
	"oneshot" methods, where a hook function will be executed just
	once and then removed.

	* pylibs/formlib/aecomp.py (ComponentSubmitProcessor): added new
	class that wraps a component call in a function in a trivial way.

2003-07-16  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/SafeSpoolTag.py: modified to use
	DT.DTCompilerUtil.safe_import.

	* pylibs/DT/DTCompilerUtil.py (safe_import): added utility
	function for importing a module into the hidden namespace.
	(Output.writelines): utility function for writing several lines
	with one function call.

2003-07-08  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:spool:>}}): 
	documented new feature of spool tag.

	* SkunkWeb/Services/templating/SafeSpoolTag.py,
	pylibs/DT/DTTags.py (SpoolTag): spool tag in DT 
	now replaced by subclass in templating that can 
	turn component comments to various levels.

2003-06-19  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/configure.in: adding firebird to list of services.

	* pylibs/Firebird.py, SkunkWeb/Services/firebird.py: connection
	cache, contributed by Brian Olsen. 

2003-06-18  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlutils.py (XMLElement.addChild): replaced "__parent" 
	and "__children" with "parent" and "children"; added "removeChild".

2003-06-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Component.py (CascadingComponentHandler): added a
	cascading component handler.
